--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/d2PCKzs/fern.webp">
             <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
+                <span>areca palm</span>
+                <h5>idk anything</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
