--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/s34sDz1/cactus.jpg">
             <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
+                <span>holiday cactus</span>
+                <h5>random text</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -114,10 +114,10 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/W680TXH/snake.jpg">
             <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
+                <span>snake plant</span>
+                <h5>thing</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
