--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="hhttps://i.ibb.co/zhCXTMD/goldeenp.webp">
+            <img src="https://i.ibb.co/thbn4yN/ladypalm.webp">
             <div class="des">
                 <span> golden pothos</span>
                 <h5>vine</h5>
