--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/thbn4yN/ladypalm.webp">
+            <img src="https://i.ibb.co/zhCXTMD/goldeenp.webp">
             <div class="des">
                 <span> golden pothos</span>
                 <h5>vine</h5>
@@ -207,7 +207,7 @@
     <p>seasonal collection</p>
     <div class="pro-container">
         <div class="pro">
-            <img src="https://i.ibb.co/thbn4yN/ladypalm.webp">
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
             <div class="des">
                 <span>lady palm</span>
                 <h5>paml thingy</h5>
