--- a/shop.html
+++ b/shop.html
@@ -35,9 +35,7 @@
 <section id="product1" class="section-p1">
     <div class="pro-container">
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
+           <span>peace lily</span>
                 <h5>Lovely Flowering Plant</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -51,9 +49,73 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/d2PCKzs/fern.webp">
             <div class="des">
-                <span>peace lily</span>
+                <span>areca palm</span>
+                <h5>idk anything</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/s34sDz1/cactus.jpg">
+            <div class="des">
+                <span>holiday cactus</span>
+                <h5>random text</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/W680TXH/snake.jpg">
+            <div class="des">
+                <span>snake plant</span>
+                <h5>thing</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/HdXtyHd/brubber.jpg">
+            <div class="des">
+                <span>Burgandy Rubber</span>
+                <h5>plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/RyqQprk/bofparadi.jpg">
+            <div class="des">
+                <span>bird of paradise</span>
                 <h5>Lovely Flowering Plant</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -67,10 +129,10 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/VCnMJWh/monkeytree.jpg">
             <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
+                <span>monkey tree</span>
+                <h5>tree or smth</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -83,74 +145,10 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/zhCXTMD/goldeenp.webp">
             <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
+                <span> golden pothos</span>
+                <h5>vine</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
