--- a/shop.html
+++ b/shop.html
@@ -160,7 +160,7 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
-        
+ </div>
         <div class="pro">
             <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
             <div class="des">
