--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
     <p>seasonal collection</p>
     <div class="pro-container">
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/47yTb0y/mari.jpg">
             <div class="des">
-                <span>lady palm</span>
+                <span>marigold</span>
                 <h5>paml thingy</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -223,9 +223,9 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/47yTb0y/mari.jpg">
             <div class="des">
-                <span>peace lily</span>
+                <span>dwarf iris</span>
                 <h5>Lovely Flowering Plant</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -239,9 +239,9 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/hR6HjkL/earlyglory.jpg">
             <div class="des">
-                <span>peace lily</span>
+                <span>early glory lily</span>
                 <h5>Lovely Flowering Plant</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -255,9 +255,9 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/LkTHjhy/grapehyacinths.jpg">
             <div class="des">
-                <span>peace lily</span>
+                <span>grape hyacinth</span>
                 <h5>Lovely Flowering Plant</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
