--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/47yTb0y/mari.jpg">
+            <img src="https://i.ibb.co/kyYVTZS/diris.jpg">
             <div class="des">
                 <span>dwarf iris</span>
                 <h5>Lovely Flowering Plant</h5>
@@ -271,7 +271,39 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/5cyydbw/ssquill.jpg">
+            <div class="des">
+                <span>siberian squill</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/SmvQ10s/lilyotv.jpg">
+            <div class="des">
+                <span>lily of the valley</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BtX11WJ/croc.jpg">
             <div class="des">
                 <span>peace lily</span>
                 <h5>Lovely Flowering Plant</h5>
@@ -287,41 +319,9 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/TkC4QGM/trillium.jpg">
             <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
+                <span>trillium</span>
                 <h5>Lovely Flowering Plant</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
