--- a/shop.html
+++ b/shop.html
@@ -33,9 +33,13 @@
 
 
 <section id="product1" class="section-p1">
+    <h2>featured products</h2>
+    <p>what others love</p>
     <div class="pro-container">
         <div class="pro">
-           <span>peace lily</span>
+            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <div class="des">
+                <span>peace lily</span>
                 <h5>Lovely Flowering Plant</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
@@ -160,9 +164,108 @@
             </div>
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
- </div>
+    </div>
+</section>
+
+    <div class="pro-container">
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/47yTb0y/mari.jpg">
+            <div class="des">
+                <span>marigold</span>
+                <h5>paml thingy</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/kyYVTZS/diris.jpg">
+            <div class="des">
+                <span>dwarf iris</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/hR6HjkL/earlyglory.jpg">
+            <div class="des">
+                <span>early glory lily</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/LkTHjhy/grapehyacinths.jpg">
+            <div class="des">
+                <span>grape hyacinth</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/5cyydbw/ssquill.jpg">
+            <div class="des">
+                <span>siberian squill</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/SmvQ10s/lilyotv.jpg">
+            <div class="des">
+                <span>lily of the valley</span>
+                <h5>Lovely Flowering Plant</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>$24.68</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+        <div class="pro">
+            <img src="https://i.ibb.co/BtX11WJ/croc.jpg">
             <div class="des">
                 <span>peace lily</span>
                 <h5>Lovely Flowering Plant</h5>
@@ -178,105 +281,9 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
+            <img src="https://i.ibb.co/TkC4QGM/trillium.jpg">
             <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
-                <h5>Lovely Flowering Plant</h5>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <h4>$24.68</h4>
-            </div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </div>
-        <div class="pro">
-            <img src="https://i.ibb.co/BTH0FyB/peacelily.webp">
-            <div class="des">
-                <span>peace lily</span>
+                <span>trillium</span>
                 <h5>Lovely Flowering Plant</h5>
                 <div class="star">
                     <i class="fas fa-star"></i>
